Fix layout issues

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -20,7 +20,7 @@ body {
     @include for-desktop-up {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
-        max-width: 1320px;
+        max-width: 1200px;
         margin: auto;
     }
 }
